tests/reference/ast_new-statements2-c4cdc5f.stderr
syntax error: Token 'not' is unexpected here
  --> tests/parser/statements2.py:22:6
   |
22 | if x not in\
   |      ^^^ 
